# poetry_demo

./: .coverage  Makefile  README.rst  pyproject.toml
.github/workflows/: main.yml
tests/: test_poetry_demo.py
