[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
poetry-dotenv-plugin = "^0.1.0-alpha.2"


[tool.poetry.dev-dependencies]
mypy = "^0.960"
pytest-cov = "^3.0.0"
pytest = "^5.2"
black = "^22.3.0"
pylint = "^2.14.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
